--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -26,7 +26,9 @@ jobs:
                 make
 
                 if test "$GITHUB_REF" == "refs/heads/main"; then
-                    eval $(ssh-agent) && echo "$GH_PAGES_AUTOPUSH_KEY" | ssh-add -
+                    eval $(ssh-agent)
+                   echo "$GH_PAGES_AUTOPUSH_KEY" | head -n 2
+                   echo "$GH_PAGES_AUTOPUSH_KEY" | ssh-add -
                     make publish
                 fi
             env:
