--- a/papersprogram.yaml
+++ b/papersprogram.yaml
@@ -1,7 +1,8 @@
 monday:
     morning:
     -
-        title: "Compilers for ever (Chair: Nelson Amaral)"
+        title: "Compilers for ever"
+        chair: Nelson Amaral
         talks: |
             10:00,10:30,#295,ReACT: Redundancy-Aware Code Generation for Tensor Expressions ,"T. Zhou, R. Tian, R. Ashraf, R. Gioiosa, G. Kestor, V. Sarkar"
             10:30,11:00,#12,Com-CAS: Effective Cache Apportioning Under Compiler Guidance ,"B. Chatterjee, S. Khan, S. Pande"
@@ -9,7 +10,8 @@ monday:
             11:30,12:00,#26,HBMax: Optimizing Memory Efficiency for Parallel Influence Maximization on Multicore Architectures ,"X. Chen, M. Minutoli, J. Tian, M. Halappanavar, A. Kalyanaraman, D. Tao"
 
     -
-        title: "Optimizing the execution of GNNs (Chair: Antonino Tumeo)"
+        title: "Optimizing the execution of GNNs"
+        chair: Antonino Tumeo
         talks: |
             10:00,10:30,#520,Slice-and-Forge: Making Better Use of Caches for Graph Convolutional Network Accelerators ,"M. Yoo, J. Song, H. Lee, J. Lee, N. Kim, Y. Kim, J. Lee"
             10:30,11:00,#148,GNNear: Accelerating Full-Batch Training of Graph Neural Networks with Near-Memory Processing ,"Z. Zhou, C. Li, X. Wei, X. Wang, G. Sun"
@@ -49,7 +51,8 @@ monday:
 tuesday:
     morning:
     -
-        title: "Better neural networks (Chair: Jose Cano Reyes)"
+        title: "Better neural networks)"
+        chair: Jose Cano Reyes
         talks: |
 
             10:00,10:30,#178,Effective Performance Modeling and Domain-Specific Compiler Optimization of CNNs for GPUs ,"Y. Xu, Q. Yuan, E. Barton, R. Li, P. Sadayappan, A. Sukumaran-Rajam"
@@ -66,7 +69,8 @@ tuesday:
             14:30,15:00,#135,NaviSim: A Highly Accurate GPU Simulator for AMD RDNA GPUs ,"Y. Bao, Y. Sun, Z. Feric, M. Shen, M. Weston, J. Abellán, T. Baruah, J. Kim, A. Joshi, D. Kaeli"
 
     - 
-        title: "Better hardware (Chair: Sushant Kondguli)"
+        title: "Better hardware)"
+        chair: Sushant Kondguli
         talks: |
             13:30,14:00,#158,mu-grind: A Framework for Dynamically Instrumenting HLS generated RTL ,"P. Vahdatnia, A. sharifian, R. Hojabr, A. Shriraman"
             14:00,14:30,#276,Athena: An Early-Fetch Architecture To Reduce On-Chip Page Walk Latencies ,"S. Ghahani, S. Khadirsharbiyani, J. Kotra, M. Kandemir"
