--- a/papersprogram.yaml
+++ b/papersprogram.yaml
@@ -53,7 +53,7 @@ monday:
 tuesday:
     morning:
     -
-        title: "Better neural networks)"
+        title: "Better neural networks"
         chair: Jose Cano Reyes
         talks: |
 
@@ -71,7 +71,7 @@ tuesday:
             14:30,15:00,#135,NaviSim: A Highly Accurate GPU Simulator for AMD RDNA GPUs ,"Y. Bao, Y. Sun, Z. Feric, M. Shen, M. Weston, J. Abellán, T. Baruah, J. Kim, A. Joshi, D. Kaeli"
 
     - 
-        title: "Better hardware)"
+        title: "Better hardware"
         chair: Sushant Kondguli
         talks: |
             13:30,14:00,#158,mu-grind: A Framework for Dynamically Instrumenting HLS generated RTL ,"P. Vahdatnia, A. sharifian, R. Hojabr, A. Shriraman"
@@ -102,6 +102,7 @@ wednesday:
 
     -
         title: Portable performance
+        chair : P. Sadayappan
         talks: |
             11:00,11:30,#312,Breaking the Vendor Lock --- Performance Portable Programming Through OpenMP as Target Independent Runtime Layer ,"J. Doerfert, M. Jasper, J. Huber, K. Abdelaal, G. Georgakoudis, T. Scogland, K. Parasyris"
             11:30,12:00,#10,BenchPress: A Deep Active Benchmark Generator ,"F. Tsimpourlas, P. Petoumenos, M. Xu, C. Cummins, K. Hazelwood, A. Rajan, H. Leather"
