--- a/papersprogram.yaml
+++ b/papersprogram.yaml
@@ -67,7 +67,7 @@ tuesday:
     afternoon:
     -
         title: Getting more out of your GPU
-        chair: Jose Moreira
+        chair: Perry Gibson
         talks: |
             13:30,14:00,#43,Locality-aware Optimizations for Improving Remote Memory Latency in Multi-GPU Systems ,"L. Belayneh, H. Ye, K. Chen, D. Blaauw, T. Mudge, R. Dreslinski, N. Talati"
             14:00,14:30,#50,GPUPool: A Holistic Approach to Fine-Grained GPU Sharing in the Cloud ,"X. Tan, P. Golikov, N. Vijaykumar, G. Pekhimenko"
@@ -91,7 +91,7 @@ tuesday:
 
     -
         title: Optimization
-        chair: Jose Moreira
+        chair: Nicolas Agostini
         talks: |
             15:30,16:00,#127,Optimizing Regular Expressions via Rewrite-Guided Synthesis ,"J. McClurg, M. Claver, J. Garner, J. Vossen, J. Schmerge, M. Belviranli"
             16:00,16:30,#120,Combining Run-time Checks and Compile-time Analysis to Improve Control Flow Auto-Vectorization ,"B. Liu, A. Laird, W. Tsang, B. Mahjour, M. Dehnavi"
